terraform/modules/k8s-infra/05-prometheus-grafana/04-grafana-service-ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-public
  namespace: monitoring
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-devuat.kubedev.link
      http:
        paths:
          - path: /
            pathType: Prefix          
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
  - hosts:
    - grafana-devuat.kubedev.link
    secretName: grafana-rsa-cert-tls
