terraform/modules/k8s-infra/05-prometheus-grafana/06-prometheus-service-ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress-public
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-devuat.kubedev.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port: 
                  number: 9090
  tls:
  - hosts:
    - prometheus-devuat.kubedev.link
    secretName: prometheus-rsa-cert-tls
